--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://raptor-i.github.io/Project-sw",
+  "homepage": "https://raptor-i.000webhostapp.com/",
   "name": "project",
   "version": "0.1.0",
   "private": true,
